--- a/themes/Guido/layouts/_default/baseof.html
+++ b/themes/Guido/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
     {{- template "_internal/opengraph.html" . -}}
   </head>
   <body>
-    <header style="background-image: url('{{ .Site.BaseURL }}images/{{ $.Param "image" }}.jpg');">
+    <header style="background-image: url('{{ .Site.BaseURL }}images/{{ $.Param "image" }}_bg.jpg');">
       <a href="{{ .Site.BaseURL }}" ></a>
     </header>
 
