Einarbeitung der Änderungswünsche

--- a/themes/Guido/layouts/_default/baseof.html
+++ b/themes/Guido/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
     <meta name="seite" content="single.html">
     {{ block "redirect" . }}{{ end }}
 
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Droid+Serif|Open+Sans" rel="stylesheet">
     <link href='{{ "style.css" | absURL }}' rel='stylesheet' type="text/css" />
 
     {{/* Add SEO &mp;  Social metadata, see https://github.com/spf13/hugo/blob/master/tpl/tplimpl/template_embedded.go#L190 */}}
@@ -33,9 +34,7 @@
     </nav>
 
     <footer>
-      <a href="{{ .Site.BaseURL }}kontakt/">Kontakt</a> •
-      <a href="{{ .Site.BaseURL }}anfahrt/">Anfahrt</a> •
-      <a href="{{ .Site.BaseURL }}impressum/">Impressum</a>
+      {{ partial "footer.html" . }}
     </footer>
   </body>
 </html>
