--- a/themes/Guido/layouts/index.html
+++ b/themes/Guido/layouts/index.html
@@ -3,7 +3,8 @@
 {{ end }}
 
 {{ define "main" }}
-    <!-- Index -->
+<article>
     <h1>{{ .Title }}</h1>
-    {{ .Content}}
+    {{ .Content }}
+</article>
 {{ end }}
