--- a/themes/Guido/layouts/shortcodes/form-contact.html
+++ b/themes/Guido/layouts/shortcodes/form-contact.html
@@ -1,5 +1,11 @@
 <form action="https://formspree.io/berengarLehr@gmail.com" method="POST" role="form">
 
+    <h3 color="red">
+        <a href="https://www.google.com/recaptcha">
+            reCaptcha registrieren
+        </a>
+    </h3>
+
     <label>
         Name
         <input type="text" id="name" name="name" required placeholder=" " aria-labelledby="name"/>
