--- a/themes/Guido/static/style.css
+++ b/themes/Guido/static/style.css
@@ -3,7 +3,7 @@
 }
 body {
     margin: 0;
-    font-family: open-sans, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #252525;
     font-size: 15px;
     --kindablack: #2F2F2F;
@@ -16,7 +16,14 @@ a {
     text-decoration: inherit;
     color: inherit;
 }
+article {
+    font-family: 'Droid Serif', serif;
+}
+article h1, article h2, article h3 {
+    font-family: 'Open Sans', sans-serif;
+}
 
+/* Header */
 header {
     width: 100%;
     height: 250px;
@@ -27,58 +34,8 @@ header a {
     height: 100%;
 }
 
-main {
-    background-color: #ffffff;
-    margin-left: 20%;
-    margin-right: 10%;
-    padding: 5em 2em 10em 2em;
-}
 
-article h1 {
-    margin-top: 0;
-    font-weight: normal;
-}
-article a {
-    color: var(--color1);
-}
-article a:hover {
-    background-color: var(--color4);
-}
-article a[href]:before {
-    content: "";
-    display: inline-block;
-    height: .8em;
-    width: .8em;
-    margin-right: 2px;
-    background-image: url("symbols/arrow.svg");
-}
-article a[href$=".pdf"]:before {
-    background-image: url("symbols/pdf.svg");
-}
-
-div.liste {
-    width: 100%;
-}
-
-a.eintrag {
-    display: block;
-    float: left;
-    width: calc(50% - 2em);
-    height: 250px;
-    margin: 0 2em 2em 0;
-    overflow: hidden;
-}
-a.eintrag img {
-    width: 9.7em;
-    height: 9.7em;
-    display: block;
-    float: left;
-    margin-right: .5em;
-    margin-bottom: .5em;
-    border-radius: 10em;
-
-}
-
+/* Navigation */
 nav {
     position: fixed;
     top: 0;
@@ -112,6 +69,67 @@ nav li.sub li {
     color: var(--color2);
 }
 
+/* Main */
+main {
+    background-color: #ffffff;
+    margin-left: 20%;
+    margin-right: 10%;
+    padding: 5em 2em 10em 2em;
+}
+
+div.liste {
+    width: 100%;
+}
+
+article h1 {
+    margin-top: 0;
+    font-weight: normal;
+}
+article a {
+    color: var(--color1);
+}
+article a:hover {
+    background-color: var(--color4);
+}
+article a[href]:before {
+    content: "";
+    display: inline-block;
+    height: .8em;
+    width: .8em;
+    margin-right: 2px;
+    background-image: url("symbols/arrow.svg");
+}
+article a[href$=".pdf"]:before {
+    background-image: url("symbols/pdf.svg");
+}
+article a[rel="footnote"]:before, article a.footnote-return:before {
+    content: none;
+}
+article blockquote {
+    margin-left: 2em;
+    font-family: 'Bad Script', cursive;
+}
+
+a.teaser {
+    display: block;
+    float: left;
+    width: calc(50% - 2em);
+    height: 250px;
+    margin: 0 2em 2em 0;
+    overflow: hidden;
+}
+a.teaser img {
+    width: 9.7em;
+    height: 9.7em;
+    display: block;
+    float: left;
+    margin-right: .5em;
+    margin-bottom: .5em;
+    border-radius: 10em;
+
+}
+
+/* Kontaktform */
 form label {
     display: block;
     margin-bottom: 2em;
@@ -122,6 +140,7 @@ form textarea {
     height: 25em;
 }
 
+/* Footer */
 footer {
     margin-left: 20%;
     margin-right: 10%;
@@ -130,4 +149,7 @@ footer {
     text-align: center;
     font-size: 110%;
     color: var(--color1);
+}
+footer a:not(:last-child):after {
+    content: " •";
 }
